# geni-portal

./: .gitignore  CHANGES  CHANGES-v1.md  CHANGES-v2.md  CHANGES.md  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL  INSTALL-centos.md  INSTALL.centos  Makefile  Makefile.am  Makefile.sync  README-packaging.md  README.md  abac-install.sh  configure.ac  dev-configure  geni-ch.spec  geni-portal.spec  install-ch-centos.sh  install-ch.sh  install-gcf-centos.sh  jacks-context.json  prep-centos.sh  prep-ch-centos.sh  prep-ch.sh
ca/: Makefile  Makefile.am  openssl.cnf
cs/: Makefile  Makefile.am  apache2.conf
cs/db/postgresql/: data.sql  disable_lockdown.sql  enable_lockdown.sql  schema.sql  update-1.sql  update-2.sql  update-3.sql  update-4.sql  update-5.sql  update-6.sql  update-7.sql  update-8.sql
cs/www/: cs_controller.php
etc/: Makefile.am  ch-services.ini.in  example-services.ini.in  example-settings.php  jacks-context.json  settings.php
example/: Makefile.am  country.php  sample.sql  services.ini  services.ini.in
geni-pgch/: Makefile  Makefile.in  NOTES.txt  aclocal.m4  config.h.in  configure  configure.ac  geni-pgch.1
geni-pgch/debian/: README  changelog  control  copyright  geni-pgch.manpages  init.d
geni-pgch/m4/: python.m4
geni-pgch/src/: Makefile.am  Makefile.in  geni-pgch.c
idp/: Makefile  Makefile.am
idp/db/postgresql/: schema.sql
idp/www/: handlerequest.php  request.html
kmtool/: Makefile  Makefile.am  km_utils.php  kmhome.php
kmtool/db/postgresql/: schema.sql  update-1.sql  update-2.sql
kmtool/www/kmtool/: km_authorize_tool.php  km_utils.php  kmactivate.php  kmcert.php  kmconfirmemail.php  kmfooter.php  kmheader.php  kmhome.php  kmnoemail.php  kmsendemail.php  loadcert.js  loadcert.php  renewcert.php
lib/: Makefile  Makefile.am
lib/php/: Pest.php  abac.php  aggstatus.php.in  am_client.php  am_map.php  cards.js  cert_utils.php  chapi.php  client_utils.php  cs_client.php  cs_constants.php  db-util.php  db_utils.php  file_utils.php  footer.php  gemini_rspec_routines.php  geni_syslog.php  guard.php  header.php  home-active.php  home-requested.php  irods_utils.php  jacks-app.php  jacks-editor-app.php  json_util.php  logging_client.php  logging_constants.php  ma_client.php  ma_constants.php  maintenance_mode.php  map.html  message_handler.php  omni_invocation_constants.php  pa_client.php  pa_constants.php  permission_manager.php  portal.php  print-text-helpers.php  proj_slice_member.php  query-details.php  (+39 more)
openid/: Makefile  Makefile.am
openid/Auth/OpenID/: Message.php
openid/doc/: apache2-consumer.conf  apache2-consumer.conf.in  apache2.conf  apache2.conf.in  httpd-centos7.conf.in
openid/server-indirect/lib/: session.php
openid/src/consumer/: common.php  finish_auth.php  try_auth.php
openid/src/server-direct/: config.php  server.php
openid/src/server-indirect/: config.php  kmactivate.php  server.php
pa/: Makefile  Makefile.am  apache2.conf
pa/db/postgresql/: data.sql  schema.sql  update-1.sql  update-2.sql  update-3.sql  update-4.sql  update-5.sql
pa/www/: pa_controller.php
portal/: Makefile  Makefile.am  apache2-http.conf  apache2.conf
portal/db/: ch-tables.txt  data.sql  queries.sql  schema.sql
portal/db/postgresql/: data.sql  gec14-data.sql  gec14-demo.sql  gec15-demo.sql  revert-9.sql  schema.sql  update-10.sql  update-11.sql  update-12.sql  update-3.sql  update-4.sql  update-5.sql  update-6.sql  update-7.sql  update-8.sql  update-9.sql
portal/flack/: flack.swf  playerProductInstall.swf
portal/flack/forge/: http.js  log.js  pki.js  tls.js
portal/gcf.d/: alice-cert.pem  alice-key.pem  am-key.pem  gcf.ini  omni.ini
portal/gcf.d/src/: gcf-pgch.py  logging.conf  omni_php.py  stitcher_logging_template.conf  stitcher_php.py
portal/www/: amstatus.php  amstatus.php.in  index.php  login-help.php  portal-ds.php
portal/www/common/: README-incommon-logo.txt  logos.html
portal/www/kmtool/: km_authorize_tool.php  km_utils.php
portal/www/policy/: privacy.html
portal/www/portal/: JacksApp.md  abac-id.php  abac-key.php  abac.php  accept-project-invite.php  add-project-note.php  add-slice-note.php  admin.php  aggregates.php  ajax.js  am-status.php.in  am_map.php  amdetails.php  amstatus.js  amstatus.php  amstatus2.js  approve.php  ask-for-project.php  cancel-join-project.php  cards.js  certificate.php  confirm-sliverdelete.php  contact-us.php  create-rspec.php  createimage.php  createslice.php  createsliver.php  cs_controller_test.php  dashboard.js  dashboard.php  db-util.php  db_error_test.php  debug.php  debug_clearcache.php  delete-project.php  deletesliver.php  deletesshkey.php  disable-project.php  disable-slice.php  do-accept-project-invite.php  (+218 more)
sa/: Makefile  Makefile.am  README.txt  apache2.conf  sample.msg
sa/db/postgresql/: data.sql  schema.sql  (+3 more)
sa/php/: db.php  sa_db.php  sa_settings.php  sa_utils.php
sa/www/: sa.php  sa_controller.php
sbin/: Makefile.am  dagoola.cmd  gen-add-constraints.sql  gen-drop-constraints.sql  geni-fetch-aggmon.in  geni-fetch-amdown  geni-fetch-amdown.in  geni-portal-install-templates.in  import_database.py  member_id-table-column  pg_hba.conf.diff  portal-backup  postgresql.conf.diff  renew-certs  update_user_certs.py  vmconf.sh
sr/: Makefile  Makefile.am  apache2.conf  getsvc
sr/certs/: cenic-of.pem  clemson-ig-boss.pem  clemson-ig-cm.pem  clemson-ig-of.pem  cornell-ig-boss.pem  cornell-ig-cm.pem  cornell-ig-of.pem  exo-bbn-am.pem  exo-fiu-am.pem  exo-gpo-of.pem  exo-nicta-am.pem  exo-rci-am.pem  exo-uh-am.pem  exosm-am.pem  genidesktop.netlab.uky.edu.pem  gpo-of.pem  gr-bbn1-am.pem  gr-bbn1-ch.pem  gr-bbncam-am.pem  gr-bbncam-ch.pem  i2-of.pem  ig-gatech-boss.pem  ig-gatech-cm.pem  ig-gatech-of.pem  ig-gpo-boss.pem  ig-gpo-cm.pem  ig-gpo-of.pem  ig-kettering-boss.pem  ig-kettering-cm.pem  ig-ky-boss.pem  ig-ky-cm.pem  ig-northwestern-boss.pem  ig-northwestern-cm.pem  ig-northwestern-of.pem  ig-utah-boss.pem  ig-utah-cm.pem  ig-utah-of.pem  ig-utahddc-boss.pem  ig-utahddc-cm.pem  ig-utahddc-of.pem  (+42 more)
sr/php/: RestUtils.php  db.php
sr/www/: services.php  sr_controller.php
(+191 files in other folders)
