AC_INIT([geni-ch], [2.25], [portal-help@geni.net])
#AM_INIT_AUTOMAKE([foreign -Wall -Werror])
#AM_INIT_AUTOMAKE([foreign -Wall])
AM_INIT_AUTOMAKE([foreign -Wall -Wno-portability])
AC_PROG_MKDIR_P
AC_PROG_INSTALL
AM_PATH_PYTHON([2.6])
AC_CONFIG_FILES([Makefile etc/Makefile bin/Makefile])
AC_CONFIG_FILES([sr/Makefile lib/Makefile cs/Makefile])
AC_CONFIG_FILES([logging/Makefile ma/Makefile pa/Makefile sa/Makefile])
AC_CONFIG_FILES([kmtool/Makefile portal/Makefile openid/Makefile])
AC_CONFIG_FILES([ca/Makefile sbin/Makefile ch/Makefile man/Makefile])
AC_OUTPUT
