svcdatadir = $(pkgdatadir)/lib

nobase_dist_svcdata_DATA = \
	php/am_client.php \
	php/cert_utils.php \
	php/cs_client.php \
	php/cs_constants.php \
	php/db_utils.php \
	php/file_utils.php \
	php/geni_syslog.php \
	php/guard.php \
	php/json_util.php \
	php/logging_client.php \
	php/logging_constants.php \
	php/ma_client.php \
	php/ma_constants.php \
	php/maintenance_mode.php \
	php/message_handler.php \
	php/pa_client.php \
	php/pa_constants.php \
	php/permission_manager.php \
	php/proj_slice_member.php \
	php/response_format.php \
	php/rq_client.php \
	php/rq_constants.php \
	php/rq_controller.php \
	php/sa_client.php \
	php/sa_constants.php \
	php/session_cache.php \
	php/signer.php \
	php/smime.php \
	php/sr_client.php \
	php/sr_constants.php \
	php/util.php

cleandb:
