svcdatadir = $(pkgdatadir)/openid

nobase_dist_svcdata_DATA = \
	src/consumer/common.php \
	src/consumer/finish_auth.php \
	src/consumer/index.php \
	src/consumer/try_auth.php \
	src/server-direct/config.php \
	src/server-direct/index.php \
	src/server-direct/lib/actions.php \
	src/server-direct/lib/common.php \
	src/server-direct/lib/render/about.php \
	src/server-direct/lib/render/idpage.php \
	src/server-direct/lib/render/idpXrds.php \
	src/server-direct/lib/render/login.php \
	src/server-direct/lib/render/trust.php \
	src/server-direct/lib/render/userXrds.php \
	src/server-direct/lib/render.php \
	src/server-direct/lib/session.php \
	src/server-direct/openid-server.css \
	src/server-direct/server.php \
	src/server-direct/setup.php \
	src/server-indirect/config.php \
	src/server-indirect/index.php \
	src/server-indirect/kmactivate.php \
	src/server-indirect/lib/actions.php \
	src/server-indirect/lib/common.php \
	src/server-indirect/lib/render/about.php \
	src/server-indirect/lib/render/idpage.php \
	src/server-indirect/lib/render/idpXrds.php \
	src/server-indirect/lib/render/login.php \
	src/server-indirect/lib/render/trust.php \
	src/server-indirect/lib/render/userXrds.php \
	src/server-indirect/lib/render.php \
	src/server-indirect/lib/session.php \
	src/server-indirect/openid-server.css \
	src/server-indirect/server.php \
	src/server-indirect/setup.php \
	Auth/OpenID/Association.php \
	Auth/OpenID/AX.php \
	Auth/OpenID/BigMath.php \
	Auth/OpenID/Consumer.php \
	Auth/OpenID/CryptUtil.php \
	Auth/OpenID/DatabaseConnection.php \
	Auth/OpenID/DiffieHellman.php \
	Auth/OpenID/Discover.php \
	Auth/OpenID/DumbStore.php \
	Auth/OpenID/Extension.php \
	Auth/OpenID/FileStore.php \
	Auth/OpenID/HMAC.php \
	Auth/OpenID/Interface.php \
	Auth/OpenID/KVForm.php \
	Auth/OpenID/MDB2Store.php \
	Auth/OpenID/MemcachedStore.php \
	Auth/OpenID/Message.php \
	Auth/OpenID/MySQLStore.php \
	Auth/OpenID/Nonce.php \
	Auth/OpenID/PAPE.php \
	Auth/OpenID/Parse.php \
	Auth/OpenID/PostgreSQLStore.php \
	Auth/OpenID/Server.php \
	Auth/OpenID/ServerRequest.php \
	Auth/OpenID/SQLiteStore.php \
	Auth/OpenID/SQLStore.php \
	Auth/OpenID/SReg.php \
	Auth/OpenID/TrustRoot.php \
	Auth/OpenID/URINorm.php \
	Auth/OpenID.php \
	Auth/Yadis/HTTPFetcher.php \
	Auth/Yadis/Manager.php \
	Auth/Yadis/Misc.php \
	Auth/Yadis/ParanoidHTTPFetcher.php \
	Auth/Yadis/ParseHTML.php \
	Auth/Yadis/PlainHTTPFetcher.php \
	Auth/Yadis/XML.php \
	Auth/Yadis/XRDS.php \
	Auth/Yadis/XRI.php \
	Auth/Yadis/XRIRes.php \
	Auth/Yadis/Yadis.php

dist_svcdata_DATA = \
	doc/apache2.conf \
	doc/apache2-consumer.conf

# I don't think we need config.php.tmpl installed.
# There are config.php files in the server-[in]direct directories.
#pkgsysconfdir = $(sysconfdir)/geni-ch/openid
#nobase_dist_pkgsysconf_DATA = etc/config.php.tmpl

# For compatibility
cleandb:
